[FRONT] 💄 correction alignement

--- a/front/frontAD512Bank/src/app/app.component.css
+++ b/front/frontAD512Bank/src/app/app.component.css
@@ -61,6 +61,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
+  align-items: center;
 }
 
 #right-part-header > * {
